@@ -1,26 +1,33 @@
 if ENABLE_BLUETOOTH_SUPPORT
 
-haldir = @hal_addon_dir@
-hal_SCRIPTS = \
-        hal-synce-bluetooth
 
 pppdir = ${sysconfdir}/ppp
 pppupdir = ${pppdir}/ip-up.d
 pppdowndir = ${pppdir}/ip-down.d
 ppppeerdir = ${pppdir}/peers
 
-pppup_SCRIPTS = synce-bt-ipup
-pppdown_SCRIPTS = synce-bt-ipdown
+EXTRA_DIST = README
 ppppeer_DATA = synce-bt-peer
 
-EXTRA_DIST = README
+if USE_HAL
+halscriptsdir = @hal_addon_dir@
+halscripts_SCRIPTS = hal-synce-bluetooth
+
+pppup_SCRIPTS = synce-hal-bt-ipup
+pppdown_SCRIPTS = synce-hal-bt-ipdown
+else
+syncedatadir = ${datadir}/@PACKAGE_NAME@
+
+pppup_SCRIPTS = synce-udev-bt-ipup
+endif
 
 else
 
 EXTRA_DIST = synce-bt-peer \
-	synce-bt-ipup.in \
-	synce-bt-ipdown.in \
+	synce-hal-bt-ipup.in \
+	synce-hal-bt-ipdown.in \
 	README \
-	hal-synce-bluetooth.in
+	hal-synce-bluetooth.in \
+	synce-udev-bt-ipup.in
 
 endif
