@@ -2,110 +2,41 @@
 
 import sys
 import os
-import re
-import stat
-import time
-import subprocess
-import logging, logging.handlers
-import platform
-import ConfigParser
+
+sys.path.insert(0,"@DATADIR@/@PACKAGE_NAME@")
+import synceconnector
+from synceconnector import run_dccm, process_config, get_logger
 
 # defaults
-config_file = '@SYSCONFDIR@/synce-connector.conf'
-log_level = logging.WARNING
 local_ip = "192.168.132.102"
 device_ip = "192.168.132.201"
-
-#
-# run dccm after the interface is configured
-#
-def RunDccm(device_ip, local_ip):
-
-    logger.debug("starting hal-dccm ...")
-
-    dccm_log_level = "1"
-
-    if log_level <= logging.DEBUG:
-        dccm_log_level = "6"
-    elif log_level <= logging.INFO:
-        dccm_log_level = "4"
-    elif log_level <= logging.WARNING:
-        dccm_log_level = "3"
-
-    cmd_list = ["@LIBEXECDIR@/hal-dccm", "--device-ip="+device_ip, "--local-ip="+local_ip, "--log-level="+dccm_log_level]
-
-    logger.debug("calling hal-dccm as:")
-    logger.debug(cmd_list)
-
-    try:
-        os.execv("@LIBEXECDIR@/hal-dccm", cmd_list)
-    except Exception,e:
-        logger.error("failed to exec hal-dccm !!: %s" % e)
-
-    return
-
-
-def ProcessConfig():
-
-    global log_level
-
-    logger = logging.getLogger("hal-synce-bluetooth")
-
-    config = ConfigParser.ConfigParser()
-    try:
-        config.read(config_file)
-    except Exception,e:
-        logger.warning("failed to parse config file %s: %s" % (config_file, e))
-        return False
-
-    if config.has_option('general', 'loglevel'):
-        loglevel_txt = config.get('general', 'loglevel').lower()
-        if loglevel_txt == 'critical':
-            log_level = logging.CRITICAL
-        elif loglevel_txt == 'error':
-            log_level = logging.ERROR
-        elif loglevel_txt == 'warning':
-            log_level = logging.WARNING
-        elif loglevel_txt == 'info':
-            log_level = logging.INFO
-        elif loglevel_txt == 'debug':
-            log_level = logging.DEBUG
-        else:
-            logger.warning("found invalid loglevel in config file %s: %s" % (config_file, loglevel_txt))
-
-        logger.setLevel(log_level)
-
-    return True
-
 
 #
 # main()
 #
 if __name__ == '__main__':
 
-    log_facility = logging.handlers.SysLogHandler.LOG_DAEMON
-
-    logging.basicConfig(level=logging.WARNING,
-                        format='%(asctime)s %(name)s %(levelname)s : %(message)s')
-    logger = logging.getLogger("hal-synce-bluetooth")
-    sys_log = logging.handlers.SysLogHandler("/dev/log", log_facility)
-    syslog_form = logging.Formatter('%(name)s[%(process)d] %(levelname)s : %(message)s')
-    sys_log.setFormatter(syslog_form)
-    logger.addHandler(sys_log)
+    logger = get_logger("hal-synce-bluetooth")
 
     if os.environ.has_key("HALD_ACTION"):
         hald_action = os.environ["HALD_ACTION"]
+
+        if os.environ.has_key("HAL_PROP_INFO_UDI"):
+            device_path = os.environ["HAL_PROP_INFO_UDI"]
+        else:
+            logger.critical("Hal environment not set: HAL_PROP_INFO_UDI missing")
+            sys.exit(1)
+
     else:
         logger.critical("Hal environment not set")
         sys.exit(1)
 
-    ProcessConfig()
-
+    process_config()
 
     if hald_action == "addon":
         logger.debug("running as addon for bluetooth device")
 
-        RunDccm(device_ip, local_ip)
+        run_dccm(device_path, device_ip, local_ip, False)
 
         logger.error("aborting ...")
         sys.exit(1)
