@@ -51,7 +51,7 @@ fi
 
 
 # do we use hal or udev ?
-AC_ARG_ENABLE(udev, AC_HELP_STRING([--enable-udev], [Build for udev]),enable_udev="$enableval",enable_udev=no)
+AC_ARG_ENABLE(udev, AC_HELP_STRING([--enable-udev], [Build for udev]),enable_udev="$enableval",enable_udev=yes)
 AM_CONDITIONAL(USE_HAL, test "x$enable_udev" = "xno")
 if test "x$enable_udev" = "xno"; then
     AC_DEFINE(USE_HAL, 1, [Build using hal])
@@ -130,10 +130,12 @@ AC_CONFIG_FILES([
         scripts/udev-synce-serial \
         scripts/synce-udev-rndis \
         scripts/synce-udev-serial \
+        scripts/synce-serial \
         scripts/85-synce.rules \
         bluetooth/hal-synce-bluetooth \
-        bluetooth/synce-bt-ipup \
-        bluetooth/synce-bt-ipdown \
+        bluetooth/synce-hal-bt-ipup \
+        bluetooth/synce-hal-bt-ipdown \
+        bluetooth/synce-udev-bt-ipup \
         etc/org.synce.dccm.service \
         etc/synce-connector.conf] )
 
