@@ -1,3 +1,11 @@
+2011-02-27  Mark Ellis  <mark@mpellis.org.uk>
+
+	* configure.ac.in - make udev default option
+	* correct log name in udev scripts
+	* add synce-serial script to start serial devices
+	  manually
+	* add udev support to bluetooth scripts
+
 2011-02-12  Mark Ellis  <mark@mpellis.org.uk>
 
 	* 0.15.1 release
